# da-marketplace

./: .envrc  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  create_ledger_parties.py  dabl-meta.yaml  daml.yaml  dit-meta.yaml  package-lock.json  package.json  shell.nix
.circleci/: config.yml
automation/broker/: pyproject.toml
automation/ccp/: pyproject.toml
automation/custodian/: pyproject.toml
automation/custodian/bot/: __init__.py  custodian_bot.py
automation/exchange/: pyproject.toml
automation/issuer/: pyproject.toml
automation/issuer/bot/: __init__.py  issuer_bot.py
automation/operator/: pyproject.toml
automation/operator/bot/: __init__.py  operator_bot.py
daml/: Common.daml  ContingentClaims  Demo.daml  Main.daml  Setup.daml  SimplifiedApi.daml
daml-ui.js/046a0de1374de97a9881df1e91c837cbc8b6a64d3522ecd297ab1b7ee95b9de4/: package.json
daml-ui.js/057eed1fd48c238491b8ea06b9b5bf85a5d4c9275dd3f6183e0e6b01730cc2ba/: package.json
daml-ui.js/1178b10733de7db22ce054f348635db86bae6a0ecbdfdc830c7071e9a9ed1fb7/: package.json
daml-ui.js/40f452260bef3f29dede136108fc08a88d5a5250310281067087da6f0baddff7/: package.json
daml-ui.js/518032f41fd0175461b35ae0c9691e08b4aea55e62915f8360af2cc7a1f2ba6c/: package.json
daml-ui.js/6839a6d3d430c569b2425e9391717b44ca324b88ba621d597778811b2d05031d/: package.json
daml.json.api/: DA-Marketplace.postman_collection.json
daml/ClaimToken/: Model.daml  (+1 more)
docs/: damlhub_deployment.md  local_development.md  user_guide.md
exberry_adapter/: .gitignore  Pipfile  pyproject.toml  setup.py
exberry_adapter/bot/: __init__.py  exberry_adapter_bot.py
exberry_adapter/test/: README.md  daml.yaml
exberry_adapter/test/daml/: Utils.daml
exberry_adapter/test/daml/Tests/: Cancel.daml  MatchForever.daml  Matching.daml  Partial.daml
integrationTesting/: README.md  daml.yaml
matching_engine/: pyproject.toml
nix/: default.nix  sources.json
scripts/: create_ledger_parties.py  run-autoapproval-triggers.sh  run-trigger.sh  run-triggers.sh  stop-autoapproval-triggers.sh  stop-trigger.sh  stop-triggers.sh  tag-versions.sh  verify-versions.sh
triggers/: daml.yaml
ui/: .env  .prettierignore  daml.yaml  package-lock.json  package.json
ui2/: package.json
(+1618 files in other folders)
