[tool.poetry]
name = "bot"
version = "0.1.14"
description = "The DA Marketplace <> Exberry Adapter Bot"
authors = ["Digital Asset"]

[tool.poetry.dependencies]
python = "^3.8"
dazl = "^7.3.4"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
