[tool.poetry]
name = "bot"
version = "0.1.8"
description = "The DA Marketplace <> Exberry Adapter Bot"
authors = ["Digital Asset"]

[tool.poetry.dependencies]
python = "^3.8"
dazl = "7.3.5rc0"
aiohttp = "^3.6.2"
grpcio = "1.36.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
