[tool.poetry]
name = "bot"
version = "0.1.16"
description = "The DA Marketplace <> Exberry Adapter Bot"
authors = ["Digital Asset"]

[tool.poetry.dependencies]
python = "3.8"
dazl = "^7.3.1"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
