[tool.poetry]
name = "bot"
version = "0.1.2"
description = "The DA Marketplace Custodian Bot"
authors = ["Digital Asset"]

[tool.poetry.dependencies]
python = "3.8"
dazl = "^6.7.4"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
