[tool.poetry]
name = "bot"
version = "0.0.3"
description = "The DA Marketplace Issuer Bot"
authors = ["Digital Asset"]

[tool.poetry.dependencies]
python = "^3.7"
dazl = "^6.7.4"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
